name:                aeson-better-errors
version:             0.9.1.3
synopsis:            Better error messages when decoding JSON values.
license:             MIT
license-file:        LICENSE
author:              Harry Garrood
maintainer:          harry@garrood.me
homepage:            https://github.com/hdgarrood/aeson-better-errors
category:            Text, Web, JSON
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
                   , CHANGELOG.md

description:
  A small package which gives you the tools to build parsers to decode JSON
  values, and gives good error messages when parsing fails.

  See also <http://harry.garrood.me/blog/aeson-better-errors/>.

source-repository head
  type:     git
  location: https://github.com/hdgarrood/aeson-better-errors

library
  exposed-modules:   Data.Aeson.BetterErrors
                     Data.Aeson.BetterErrors.Internal
  other-modules:     Data.Aeson.BetterErrors.Utils
  build-depends:     base >=4.5 && <5
                   , aeson >=0.7 && <1.6 || >=2.0 && <2.3
                   , unordered-containers >=0.2
                   , dlist >=1.0
                   , text >=2.0
                   , bytestring >=0.11
                   , scientific >=0.3
                   , vector >=0.13
                   , transformers >=0.5
                   , transformers-compat >= 0.4
                   , mtl >=2.2
                   , void >=0.7

  ghc-options:       -Wall
  hs-source-dirs:    src
  default-language:  Haskell2010

-- test-suite tests
--   type:              exitcode-stdio-1.0
--   main-is:           Main.hs
--   hs-source-dirs:    test
--   build-depends:     base >=4 && <5
--                    , aeson -any
--                    , aeson-better-errors -any
--                    , bytestring -any
--                    , text -any
--                    , unordered-containers -any
--                    , tasty -any
--                    , tasty-hunit -any
--   ghc-options:       -Wall -fno-warn-missing-signatures
--   default-language:  Haskell2010
